internal class AnimationStrings
{
    internal static string isMoving = "IsMoving";
    internal static string isRunning = "IsRunning";
    internal static string jump = "Jump";
    internal static string isOnGround = "IsOnGround";
    internal static string isOnWall = "IsOnWall";
    internal static string isOnCeiling = "IsOnCeiling";
    internal static string velocityY = "VelocityY";
    internal static string attack = "Attack";

}